--- a/Brand/Ferruccio.html
+++ b/Brand/Ferruccio.html
@@ -120,10 +120,11 @@
         </form>
     </div>
   </nav>
+  <img src="img/Ferruccio/saaa.png" width="100%">
 
-    <br>
+    <br><br>
     
-  <div class="container " style="background: red;">
+  <div class="container">
     <div class="row">
       <div class="col-md-6">
         <h4 style="text-align: center;">THE ORIGINS</h4>
@@ -134,7 +135,7 @@
         </span></p>
       </div>
       <div class="col-md-6">
-        image <!-- diisi gambar ferrucio -->
+        <img src="img/Ferruccio/Ferruccio_Profil.jpeg" width="100%">
       </div>
     </div>
   </div>
@@ -143,7 +144,7 @@
 
   <div class="row " style="height: 100px">
     <div class="col-md-6" style="background: red">
-      Image <!-- diisi gambar Mobil -->
+      <img src="" alt=""> <!-- diisi gambar Mobil -->
     </div>
     <div class="col-md-3" style="background: green">
       kata-kata 
@@ -159,15 +160,17 @@
     <div class="row">
       <div class="col-md-6">
         <div style="background: none; height: 100px"></div>
-        <div style="background-color: yellow; height: 400px">
-          Menu 1
+        <div style="height: 400px">
+          <img src="img/Ferruccio/lamborghini-vs-ferrari-640x535.jpg" height="100%">
         </div>
       </div>
       <div class="col-md-6">
-        <div style="background-color: yellow; height: 400px">
-          Menu 2
+        <div style="height: 400px">
+          <img src="img/Ferruccio/032161200_1426140337-ferruccio_lamborghini.jpg" width="100%">
         </div>
-        <div style="background: none; height: 100px"></div>
+        <div style="background: none; height: 100px">
+          
+        </div>
       </div>  
     </div>
   </div>
@@ -178,19 +181,17 @@
     <div class="text-center">
       <h4><b>AUTOMOBILI</b> FERRUCCIO LAMBORGHINI</h4>
       <p style="outline: solid; clear: : both "><span class="border-bottom-0 border-success">
-          The history of ‘Lamborghini Automobili’ officially starts in 1963. Nevertheless, we must consider the distant roots of this event, and they are the roots of Ferruccio Lamborghini. Born in 1916, this capable, impetuous, strong-willed Taurus was the leading character in the foundation of the company and the early phases of its extraordinary history.
-          By the time he decided to build a factory of luxury sports cars, Ferruccio was already a very wealthy man. In the period following World War II, he founded his tractor factory, which he launched with energy and determination, creating a major point of reference in this industry.
-          By the early Sixties, Lamborghini was a powerful and successful man who knew exactly what he wanted, but when he said he would build the best super sports car ever, many people thought he was mad. Constructing that kind of car was viewed as an unexplainable extravagance, a hazardous leap in the dark, and something that would squander his fortune without ever turning a profit.
-        </span></p>
-      </div>
+        The history of ‘Lamborghini Automobili’ officially starts in 1963. Nevertheless, we must consider the distant roots of this event, and they are the roots of Ferruccio Lamborghini. Born in 1916, this capable, impetuous, strong-willed Taurus was the leading character in the foundation of the company and the early phases of its extraordinary history.
+        By the time he decided to build a factory of luxury sports cars, Ferruccio was already a very wealthy man. In the period following World War II, he founded his tractor factory, which he launched with energy and determination, creating a major point of reference in this industry.
+        By the early Sixties, Lamborghini was a powerful and successful man who knew exactly what he wanted, but when he said he would build the best super sports car ever, many people thought he was mad. Constructing that kind of car was viewed as an unexplainable extravagance, a hazardous leap in the dark, and something that would squander his fortune without ever turning a profit.
+      </span></p>
+    </div>
     <br>
     <!-- VIDEO -->
-    <iframe src="blob:https://www.lamborghini.com/eb0c35b5-73c9-4a89-9275-e3af0f731ee6" style="height: 100%; width: 100%">
-      youtube
-    </iframe>
-    <br>
-    <div class="text-left" style="outline: solid">
-      <h4>A MAN <b>A DREAM</b></h4>
+    <video src="../Videos/History_Ferrucio.mp4" autobuffer autoloop loop controls poster="/images/video.png" width="100%"></video>
+    <br><br>
+    <h4 >A MAN <b>A DREAM</b></h4>
+    <div class="text-left p-lg-3" style="outline: solid">
       <p><span class="border-bottom-0 border-success">
           The history of ‘Lamborghini Automobili’ officially starts in 1963. Nevertheless, we must consider the distant roots of this event, and they are the roots of Ferruccio Lamborghini. Born in 1916, this capable, impetuous, strong-willed Taurus was the leading character in the foundation of the company and the early phases of its extraordinary history.
           By the time he decided to build a factory of luxury sports cars, Ferruccio was already a very wealthy man. In the period following World War II, he founded his tractor factory, which he launched with energy and determination, creating a major point of reference in this industry.
@@ -198,22 +199,58 @@
         </span></p>
       </div>
       <br>
-      <div class="row">
-        <div class="col-md-6">
-          <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/people/ferruccio/people-left.jpg" alt="">
-        </div>
-        <div class="col-md-6">
-          <img src="https://www.lamborghini.com/sites/it-en/files/DAM/lamborghini/people/ferruccio/people-right.jpg" alt="">
-        </div>
-      </div>
   </div> <!-- end container -->
 
+  <img src="img/Ferruccio/Untitled-7.png" alt="">
 
+  <br><br>
 
-
-
-    <!-- tambah.i footer -->
-    <!-- NUNGGU FOOTER JADI -->
+  <footer class="footer">
+    <div class="container bottom_border">
+      <div class="row">
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="#">Urus</a></li>
+            <li><a href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
+            <li><a href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
+            <li><a href="../Models/Aventador_S.html">Aventador S</a></li>
+            <li><a href="../Models/Aventador_SVJ.html">Aventador SVJ</a></li>
+          </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
+            <ul class="footer_ul_amrc">
+              <li><a href="../Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
+              <li><a href="../Brand/Marcello.html">Marcello Gandhini</a></li>
+              <li><a href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
+              <li><a href="../Brand/Masterpieces.html">Masterpieces</a></li>
+              <li><a href="../Brand/Design.html">Design</a></li>
+            </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="../Ownership/Dealer.html">Dealer Locator</a></li>
+            <li><a href="../Ownership/Service.html">Service Locator</a></li>
+            <li><a href="../Ownership/Center.html">Coullisin Center</a></li>
+            <li><a href="../Ownership/Sparepart.html">Sparepart</a></li>
+            <li><a href="../Ownership/Accessori.html">Accessori Originali</a></li>
+          </ul>
+        </div>  
+      </div>
+    </div>
+    <div class="container">
+      <ul class="foote_bottom_ul_amrc">
+      <li><a href="#">Models</a></li>
+      <li><a href="#">Brand</a></li>
+      <li><a href="#">Ownership</a></li>
+      <li><a href="#">Motorsport</a></li>
+      <li><a href="#">History</a></li>
+      </ul>
+      <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+    </div>
+  </footer>
 
 
 
