--- a/Brand/Giampaollo.html
+++ b/Brand/Giampaollo.html
@@ -120,7 +120,7 @@
         </form>
     </div>
   </nav>
-
+  <img src="img/Giampaollo/5.png" width="100%">
     <br>
 
     <br>
@@ -129,17 +129,17 @@
     <h4 class="text-center"><b>Biography</b></h4>
     <div class="row" style="outline: solid; clear: : both; padding: 10px; ">
       <div class="col-md-6">
-        <H2>ENGINEER</H2>
+        <H2 style="text-align: center;">ENGINEER</H2>
         <p style="text-align: right;"><span class="border-bottom-0 border-success">
           Giampaolo Dallara was born on November 16, 1936, in Varano de' Melegari, near Parma. He studied Aeronautical Engineering at Milan’s Politecnico University, graduating in 1959. He joined Automobili Lamborghini in 1963 as Technical Director, remaining until 1969: these were the years of the 350 GT, the Miura and the Espada. Together with Stanzani and Gandini, he has always been considered one of the fathers of the Miura from the point of view of its technical development.</span></p>
       </div>
       <div class="col-md-6">
-        IMAGE
+        <img src="img/Giampaollo/gian.jpeg" width="100%">
       </div>
     </div>    <br>
     <div class="row " style="height: 100px">
       <div class="col-md-6" style="background: red">
-        Image <!-- diisi gambar Mobil -->
+        <img src="img/Giampaollo/032161200_1426140337-ferruccio_lamborghini.jpg" alt="">
       </div>
       <div class="col-md-6" style="background: green">
         kata-kata 
