--- a/Brand/Marcello.html
+++ b/Brand/Marcello.html
@@ -120,7 +120,7 @@
         </form>
     </div>
   </nav>
-
+  <img src="img/Marcello/6.png" width="100%">
     <br>
 
     <br>
@@ -129,15 +129,14 @@
     <h4 class="text-center"><b>Biography</b></h4>
     <div class="row" style="outline: solid; clear: : both; padding: 10px; ">
       <div class="col-md-6">
-        <H2>DESIGNER</H2>
+        <br><br><br>
+        <H2 style="text-align: center;">DESIGNER</H2>
         <p style="text-align: right;"><span class="border-bottom-0 border-success">
           Marcello Gandini was born in Turin on August 26, 1938 and designed some of the most stunning Italian motor vehicles from the mid sixties onwards. Even if his creative skills were employed primarily in the design of cars, he was also involved in industrial design and home accessories. He was head designer at Bertone until 1980, when he decided on a change of direction and became a freelance designer. He took over from his contemporary Giorgetto Giugiaro at Bertone, designing the most popular Italian sports vehicles in '60s and '70s, including the famous Lamborghini Miura and Countach
-
-
           </span></p>
       </div>
       <div class="col-md-6">
-        IMAGE
+        <img src="img/Marcello/mar.jpeg" width="100%">
       </div>
     </div>
 
