--- a/History/History.html
+++ b/History/History.html
@@ -121,9 +121,22 @@
 	<div class="row berita ">
 		<div class="col-md-2 ">
 			<ul style="list-style: none;">
-				<li><a onclick="load1()">load 1</a></li>
-				<li><a onclick="load2()">Load 2</a></li>
-				<li><a onclick="load3()">Load 3</a></li>
+				<li><a onclick="load1963()">1963-1964</a></li>
+				<li><a onclick="load1965()">1965-1966</a></li>
+				<li><a onclick="load1967()">1967-1968</a></li>
+				<li><a onclick="load1969()">1969-1971</a></li>
+				<li><a onclick="load1972()">1972-1973</a></li>
+				<li><a onclick="load1974()">1974-1977</a></li>
+				<li><a onclick="load1978()">1978-1980</a></li>
+				<li><a onclick="load1981()">1981-1983</a></li>
+				<li><a onclick="load1984()">1984-1986</a></li>
+				<li><a onclick="load1987()">1987-1990</a></li>
+				<li><a onclick="load1991()">1991-1993</a></li>
+				<li><a onclick="load1994()">1994-1997</a></li>
+				<li><a onclick="load1998()">1998-2004</a></li>
+				<li><a onclick="load2005()">2005-2007</a></li>
+				<li><a onclick="load2008()">2008-2013</a></li>
+				<li><a onclick="load2014()">2014-TODAY</a></li>
 			</ul>
 		</div>
 		<div class="col-md-9">
