--- a/Models/Aventador_S.html
+++ b/Models/Aventador_S.html
@@ -121,30 +121,28 @@
         </form>
     </div>
   </nav> 
-
-  <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h2><b>OVERVIEW</b></h2>
-        <p>
-          An icon cannot be reinvented, it can only be challenged. And only Aventador could surpass itself. Following Miura, Islero, Countach, and Urraco, Lamborghini’s most iconic model now reaps the inheritance of the historic S models and evolves into the new Aventador S. Exclusive Lamborghini design and the new V12 engine with a whopping 740 HP now join the most sophisticated technology of the range, featuring the new LDVA (Lamborghini Dinamica Veicolo Attiva/Lamborghini Active Vehicle Dynamics), which offers an unparalleled driving experience to all those who honour their egos by challenging themselves every da
-        </p>
-      </div>
-      <div class="col-md-6">
-        image
+  <div class="row" style="font-size: 16px">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
+        <h2 style="text-align: center;"><b>THE ORIGINS</b></h2>
+        <p class="text-justify"><span class="border-bottom-0 border-success">
+          The history of ‘Lamborghini Automobili’ officially starts in 1963. Nevertheless, we must consider the distant roots of this event, and they are the roots of Ferruccio Lamborghini. Born in 1916, this capable, impetuous, strong-willed Taurus was the leading character in the foundation of the company and the early phases of its extraordinary history.
+          By the time he decided to build a factory of luxury sports cars, Ferruccio was already a very wealthy man. In the period following World War II, he founded his tractor factory, which he launched with energy and determination, creating a major point of reference in this industry.
+          By the early Sixties, Lamborghini was a powerful and successful man who knew exactly what he wanted, but when he said he would build the best super sports car ever, many people thought he was mad. Constructing that kind of car was viewed as an unexplainable extravagance, a hazardous leap in the dark, and something that would squander his fortune without ever turning a profit.
+        </span></p>
       </div>
     </div>
+    <div class="col-md-6">
+      <br><br><br><br>
+      <img src="../img/aventador/2.png" alt="" align="right" width="100%">
+    </div>
   </div>
-
-  <br>
-  
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        image
-      </div>
-      <div class="col-md-6">
+  <div class="row">
+    <div class="col-md-6">
+      <img src="../img/aventador/3.png" alt="" align="left">
+    </div>
+    <div class="col-md-6">
+      <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>EMOTION</b></h2>
         <p>
           What the new S model inherits from the Aventador family is its extraordinary beating heart: the iconic V12 engine. It is the sign of recognition of a thoroughbred power, with its excellent acceleration performance at any engine speed, lightning-fast responsiveness, a breathtaking roar, and now a full 40 HP more to unleash on the asphalt. But Aventador S will not settle for less and wants everything: the performance features of a super sports car are joined by the extreme agility and handling of the 4 Wheel Steering system for unprecedented driving dynamics, along with the possibility to have the most personal driving experience ever thanks to the brand new EGO customised driving mode.
@@ -153,30 +151,28 @@
     </div>
   </div>
 
-    <br>
+  <img src="../img/aventador/7.png" alt="">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h2><b>EXTERIOR </b>DESIGN</h2>
+  <div class="row" style="font-size: 16px">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
+       <h2><b>EXTERIOR </b>DESIGN</h2>
         <p>
           Working on the design of an icon like Aventador means not altering its character but exalting it even more. Aventador S continues to display the unmistakable Lamborghini DNA, while strengthening its mix of dynamism, refinement, and aggressiveness by means of even sharper lines inspired by nature and by aeronautics. While the hexagonal design of the new tailpipes means that the rear end is as powerful as the engine of a space shuttle, the front end features forms that recall the fins of a shark, transmitting the same force and elegance in dominating the road. But the design of a Lamborghini is never an end in itself. Each surface of the new Aventador S has been studied to gain power and improve performance. Compared to the first Aventador, in fact, the new design elements provide an increase of 130% in front downforce, while the new side air vents reduce turbulence, improving cooling and increasing efficiency.
         </p>
       </div>
-      <div class="col-md-6">
-        image
-      </div>
+    </div>
+    <div class="col-md-6">
+      <br><br><br><br>
+      <img src="../img/aventador/4.png" alt="" align="right" width="100%">
     </div>
   </div>
-
-  <br>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        image
-      </div>
-      <div class="col-md-6">
+  <div class="row">
+    <div class="col-md-6">
+      <img src="../img/aventador/5.png" alt="" align="left">
+    </div>
+    <div class="col-md-6">
+      <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>INTERIOR</b></h2>
         <p>
           The interiors of the new Aventador S fully reflect the car’s mission, which is, to be different from all others: a super sports car with cutting-edge technology but also incredibly luxurious. The interior finishes are crafted using materials of the highest quality and present an infinite variety of possibilities, like the new S-trim configuration, created to celebrate the car’s name. The options also include the possibility to choose an innovative material such as Carbon Skin® and to have certain parts of the carbon body left exposed. The elegance of the interior is matched with the extremely advanced technology, such as the instrument panel with interactive TFT LCD display with completely redesigned graphics, and the possibility to enhance the interiors with a LED lighting system created ad hoc.        
@@ -184,31 +180,14 @@
       </div>
     </div>
   </div>
-
+  <img src="../img/aventador/6.png" width="100%">
   <div class="container">
-    <h2><b>DRIVING</b> DYNAMICS</h2>
+    <h2 style="text-align: center;"><b>DRIVING</b> DYNAMICS</h2>
     <p class="text-center">
       In addition to its beating heart, Aventador S is also endowed with an incredibly sophisticated brain: the innovative Lamborghini Active Vehicle Dynamics (LDVA) control unit, a system of active technologies that can manage each of the dynamic axles of the vehicle. The lateral vehicle dynamics is controlled by a steering system that involves all four wheels using Lamborghini Dynamic Steering (LDS) and Lamborghini Rear-wheel Steering (LRS). The vertical vehicle dynamics is handled by the Lamborghini Magneto-rheological suspension (LMS) and the active rear aerodynamics. And the longitudinal dynamics relies on the four-wheel drive system (4WD). The LDVA system combines all the information coming from the car’s sensors and establishes in real time the best setting for each driving condition. The result is performance that is absolutely perfect, safe, and compelling.
     </p>
   </div>
 
-    <br>
-  
-  <div class="container-fluid">
-    <div class="row" style="height: 100px;">
-      <div class="col-md-3" style="background: red">
-        img
-      </div>
-      <div class="col-md-9" style="background: blue">
-        img
-      </div>
-    </div>
-  </div>
-    
-    <br>
-  
-  custom carosel
-    
     <br>
 
   <!-- SPECIFICATION -->
