--- a/Models/Aventador_SVJ.html
+++ b/Models/Aventador_SVJ.html
@@ -123,52 +123,37 @@
   </nav> 
 
   <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
+  <div class="row" style="font-size: 16px">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>OVERVIEW</b></h2>
         <p>
           The future is unknown. It is a journey, an adventure. And above all, it is a challenge.
-        </p>
-        <p>
           Lamborghini has never shied away from challenges, which is precisely why it created the new Aventador SVJ. To combine cutting-edge technology with extraordinary design, without ever coming to compromises.
-        </p>
-        <p>
           In a future driven by technology, it’s easy to lose track of emotions. But in the future we are shaping, real emotions won’t be left behind. Because at the wheel, there will always be a person.
-        </p>
-        <p>
           Aventador SVJ. Real emotions shape the future.
         </p>
       </div>
-      <div class="col-md-6">
-        image
-      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="../img/aventador/2.png" alt="" align="right" width="100%">
     </div>
   </div>
-
-  <br>
-  
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        image
-      </div>
-      <div class="col-md-6">
+  <div class="row">
+    <div class="col-md-6">
+      <img src="../img/aventador/3.png" alt="" align="left">
+    </div>
+    <div class="col-md-6">
+      <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>EMOTION</b></h2>
-        <p>The Lamborghini driving experience isn’t easy to put into words: a stupefying mix of exceptional performance, groundbreaking technology and perfect aerodynamics.</p>
-        <p>Yet there is one more element that is utterly indispensable for the future we envision: real emotions. </p>
-        <p>The vehicle’s impeccable dynamics and the outstanding performance of the new 770 CV naturally-aspirated V12 engine combine with the mastery of a superior design, in which prized and exclusive materials forge a symbiosis with the car's ultra-lightweight body.</p>
-        <p>Because the future we have in mind can only exist when uncompromising aesthetic perfection meets unparalleled performance and thrill-inducing aerodynamics.</p>
+        <p>The Lamborghini driving experience isn’t easy to put into words: a stupefying mix of exceptional performance, groundbreaking technology and perfect aerodynamics.Yet there is one more element that is utterly indispensable for the future we envision: real emotions.The vehicle’s impeccable dynamics and the outstanding performance of the new 770 CV naturally-aspirated V12 engine combine with the mastery of a superior design, in which prized and exclusive materials forge a symbiosis with the car's ultra-lightweight body.Because the future we have in mind can only exist when uncompromising aesthetic perfection meets unparalleled performance and thrill-inducing aerodynamics.</p>
       </div>
     </div>
   </div>
-
-    <br>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h2><b>EXTERIOR </b>DESIGN</h2>
+  <div class="row" style="font-size: 16px">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
+       <h2><b>EXTERIOR </b>DESIGN</h2>
         <p>
           Ultra-lightweight materials conceived for maximum performance give rise to breathtaking design:
           that’s what makes the new Aventador SVJ unique and unrivaled.
@@ -176,20 +161,18 @@
         </p>
         <p>With its unique colour and trim, the SVJ 63 special edition emphasizes the abundance of carbon fiber in the design. This limited edition of only 63 vehicles was produced to mark Lamborghini’s founding year of 1963. Watch the images of the Aventador SVJ 63 in the gallery</p>
       </div>
-      <div class="col-md-6">
-        image
-      </div>
+    </div>
+    <div class="col-md-6">
+      <br><br><br><br>
+      <img src="../img/aventador/4.png" alt="" align="right" width="100%">
     </div>
   </div>
-
-  <br>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        image
-      </div>
-      <div class="col-md-6">
+  <div class="row">
+    <div class="col-md-6">
+      <img src="../img/aventador/5.png" alt="" align="left">
+    </div>
+    <div class="col-md-6">
+      <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
         <h2><b>INTERIOR</b></h2>
         <p>
           The technological look of carbon fiber – featured in the monocoque which forms the cockpit and recurring in the doors, seats, central tunnel and console – coexists with a design of clear aeronautical inspiration, while the leather and Alcantara® upholstery add a boldly exclusive touch to the luxurious interiors.
@@ -198,30 +181,13 @@
       </div>
     </div>
   </div>
-
+  <img src="../img/aventador/6.png" width="100%">
   <div class="container">
-    <h2><b>DRIVING</b> DYNAMICS</h2>
+    <h2 style="text-align: center;"><b>DRIVING</b> DYNAMICS</h2>
     <p class="text-center">
       Each of the systems at work inside Lamborghini vehicles is a masterpiece of engineering and technology. And the Aventador SVJ is the first Lamborghini to incorporate all the best technologies ever developed by the company. The lateral vehicle dynamics is controlled by a steering system that acts on all four wheels via Lamborghini Dynamic Steering (LDS) and Lamborghini Rear-wheel Steering (LRS), aided by the use of active torque distribution between the front and rear axles (4WD) and aero torque vectoring (ALA). The vertical vehicle dynamics is managed by the Lamborghini Magneto-rheological suspension (LMS) and the active aerodynamics. Finally, the longitudinal dynamics relies on the four-wheel drive system (4WD), the integrated traction control and the new operative logics of the ABS. The LDVA 2.0 system combines all the information gathered through the car’s inertial platform, and determines in real time the optimal settings for any driving condition. The result is perfect performance, absolutely safe and always compelling.
   </div>
 
-    <br>
-  
-  <div class="container-fluid">
-    <div class="row" style="height: 100px;">
-      <div class="col-md-3" style="background: red">
-        img
-      </div>
-      <div class="col-md-9" style="background: blue">
-        img
-      </div>
-    </div>
-  </div>
-    
-    <br>
-  
-  custom carosel
-    
     <br>
 
   <!-- SPECIFICATION -->
