--- a/Models/Huracan_RWD.html
+++ b/Models/Huracan_RWD.html
@@ -143,14 +143,14 @@
       </div>
     </div>
     <div class="col-md-6">
-      <img src="img/rwd/rwd1.png" alt="" width="" align="right">
+      <img src="img/rwd/rwd1.png" alt="" align="right" width="100%">
     </div>
   </div>
 
 
   <div class="row">
     <div class="col-md-6">
-      <img src="img/rwd/rwd2.png" alt="" width="" align="left">
+      <img src="img/rwd/rwd2.png" alt="" width="100%" align="left">
     </div>
     <div class="col-md-6">
       <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
@@ -181,19 +181,16 @@
       </div>
     </div>
     <div class="col-md-6">
-      <img src="img/rwd/rwd3.png" alt="" width="" align="right">
+      <img src="img/rwd/rwd3.png" width="105%" align="right">
     </div>
   </div>
-
-  <br>
-
   <div class="row">
     <div class="col-md-6">
-      <img src="img/rwd/rwd4.png" alt="" width="" align="left">
+      <img src="img/rwd/rwd4.png" width="100%" align="left">
     </div>
     <div class="col-md-6">
-      <h2><b>INTERIOR</b></h2>
-      <p>
+      <br><br><h2><b>INTERIOR</b></h2>
+      <p style="margin-right: 150px;">
         The interior of the Huracán RWD offer countless combinations of colors and finishes, as well as a state-of-the-art infotainment system: all the comfort that you'll need to dominate the road, one bend at a time. Form has never followed function so perfectly.        
       </p>
     </div>
