--- a/Models/Urus.html
+++ b/Models/Urus.html
@@ -129,60 +129,61 @@
     			<button class="btn btn-outline-success mr-2 my-sm-0" type="submit">Search</button>
 
     			<!-- login -->
-    			<button class="btn btn-outline-primary my-2 my-sm-0"><a href="..Login/index.php">Login</a></button>
+    			<button class="btn btn-outline-primary my-2 my-sm-0"><a href="../Login/index.php">Login</a></button>
   		</form>
 		</div>
 	</nav>
 
+	<div style="background-color: brown" class="kuning">
+		<img src="../img/urus/1.png" width="100%" height="100%">
+	</div>
+
 	<br>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h2><b>OVERVIEW</b></h2>
-				<p>
+	<div class="row" style="font-size: 16px">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
+        <h2><b>OVERVIEW</b></h2>
+      <p>
 					A super sports car soul and the functionality typical for an SUV: this is Lamborghini Urus, the world’s first Super Sport Utility Vehicle. Identifiable as an authentic Lamborghini with its unmistakable DNA, Urus is at the same time a groundbreaking car: the extreme proportions, the pure Lamborghini design and the outstanding performance make it absolutely unique. Urus’ distinctive silhouette with a dynamic flying coupé line shows its super sports origins, while its outstanding proportions convey strength, solidity and safety. Without a doubt the factors at the heart of Urus’ success are advanced design, extraordinary driving dynamics and thrilling performance. All these features allowed Lamborghini to launch a Super Sport Utility Vehicle remaining loyal to its DNA.
 				</p>
-				<p>
-					Urus conveys its utmost versatility also in its design, which meets the requirements of a wide variety of customers with Style packages, exterior details in carbon fiber or the Off-Road package.
-				</p>
-			</div>
-			<div class="col-md-6">
-				<img src="../img/duaa.png" alt="" width="200px" height="100px">
-			</div>
-		</div>
-	</div>
-
-	<br>
-	
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				image
-			</div>
-			<div class="col-md-6">
-				<h2><b>EMOTION</b></h2>
-				<p>
+      </div>
+    </div>
+    <div class="col-md-6">
+    	<br>
+      <img src="../img/urus/2.png" alt="" align="right"style="position: static;">
+    </div>
+  </div>
+	<div class="row">
+    <div class="col-md-6">
+      <img src="../img/urus/3.png" alt="" align="left">
+    </div>
+    <div class="col-md-6">
+      <div style="margin-right: 150px; margin-top: 50px; text-align: justify;">
+        <h2><b>EMOTION</b></h2>
+        <p>
 					A distinct Lamborghini engine sound, coupled with traits of a sports car and SUV, provide the driver with a uniquely emotional experience. With its strong personality, pure design and absolute sportiness, Lamborghini Urus is one of a kind. The world’s first Super Sport Utility Vehicle is easy, safe and fun to drive, thanks to its ANIMA (Adaptive Network Intelligent MAnagement) Selector that delivers pure driving emotions and new specific settings for the best driving dynamics. Urus is a versatile car perfectly suited for everyday driving, but it also provides the distinct engine sound, all of the thrill and the high performance of a real Lamborghini.
 				</p>
-			</div>
-		</div>
-	</div>
+      </div>
+    </div>
+  </div>
 
-		<br>
+	<br>
+	<img src="../img/urus/7.png" alt="">	
+	<br>
 
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<h2><b>EXTERIOR </b>DESIGN</h2>
-				<p>
+	<div civ class="row">
+    <div class="col-md-6">
+      <div style="margin-left: 150px; margin-top: 50px; text-align: justify;">
+        <h2><b>EXTERIOR </b>DESIGN</h2>
+        <p>					
 					Lamborghini Urus has a cutting-edge, distinct and streamlined design with multiple souls: sporty, elegant and off-road. Its muscular surfaces make it appear strong and self-secure, while the mixed tires allow a luxury super sports car look. All the surfaces are designed with a clear attention to functionality. Some Lamborghini details and iconic shapes can be immediately recognized at first glance, such as the “Y” and the hexagon elements, the front bonnet with center peak and the cross lines on rear door. The extreme proportions and the single silhouette line make Urus a real Lamborghini. Furthermore, its proportions are unique since it is the lowest SUV  in its class. Urus design took inspiration from the heritage of the LM002 in regard to the power dome showing the position of the engine and the significant diagonal lines, while the frameless doors recall the iconic Marcello Gandini line.
 				</p>
-			</div>
-			<div class="col-md-6">
-				image
-			</div>
-		</div>
-	</div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <img src="../img/urus/4.png" alt="" width="" align="right">
+    </div>
+  </div>
 
 	<br><br>
 
@@ -299,27 +300,29 @@
 	<div class="gallery js-flickity">
 	  <div class="gallery-cell">
 	  	<h3>ENGINE & TRANSMISSION</h3>
-	  	<img src="../img/1.jpg" alt="">
+	  	<div class="tengah">
+	  		<img src="img/mesin/engine-transmisi.png" alt="" width="63%" height="35%">
+	  	</div>
 	  	<p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
 	  </div>
 	  <div class="gallery-cell">
 	  	<h3>SAFETY & ASSISTANCE SYSTEM</h3>
-	  	<img src="../img/1.jpg" alt="">
+	  	<img src="img/mesin/safety.jpg" height="170px;">
 	  	<p style="overflow: scroll; height: 300px;">Lamborghini Urus is a versatile car in which the latest technologies offer an unparalleled level of everyday usability. It is set up with the latest safety and driving technology systems that can be tailored to different customers’ needs. Urus is easy and safe to drive: it ensures maximum comfort and safety at 360° for city driving and long trips. An array of features makes the drive very comfortable, and great attention has been given also to the rear passengers’ comfort. There are three ADAS (Advanced Driver Assistance Systems) packages: “Urban Road”, "Full ADAS"  and “Highway”. They contain new, innovative and intelligent assistance and safety systems enabled to suit individual driving preferences.</p>
 	  </div>
 	  <div class="gallery-cell">
 	  	<h3>ANIMA</h3>
-	  	<img src="../img/1.jpg" alt="">
+	  	<img src="img/mesin/anima.png" height="170px;">
 	  	<p style="overflow: scroll; height: 300px;">What really makes Urus a true Lamborghini is the electronic platform that controls the systems and radically transforms its dynamic behavior, taking the driver experience to another level. The ANIMA Selector is the secret of Lamborghini driving dynamics, the key command to choose the desired setup. The vehicle adapts according to the driving mode selected. There are three on-road modes: STRADA for easiness of driving, comfort and safety; SPORT for agility, responsiveness and fun to drive; CORSA for precision and maximum performance. The three off-road modes enhance the Urus performance even more: NEVE ensures ease and safety even on slippery surfaces; TERRA ensures comfort and ease in off-road conditions; SABBIA is perfect for sandy surfaces. Finally, the EGO mode enables the driver to redefine the vehicle’s dynamics according to preferences and needs in terms of steering, suspension and traction.</p>
 	  </div>
 	  <div class="gallery-cell">
 	  	<h3>TECHNOLOGY & INFOTAINMENT</h3>
-	  	<img src="../img/1.jpg" alt="">
+	  	<img src="img/mesin/teknologiinfotemen.jpg" height="170px;">
 	  	<p style="overflow: scroll; height: 300px;">Lamborghini Infotainment System III (LIS III) provides astonishing technological comfort including two intuitive touchscreens with haptic feedback, interactive voice commands and a total of three innovative high-definition displays. In the cockpit, their representations and icons change according to each driving mode selection. A high quality of usability is also guaranteed by an up-to-date multi-connection concept, which improves safety and entertainment.</p>
 	  </div>
 	  <div class="gallery-cell">
 	  	<h3>DRIVETRAIN & CHASSIS</h3>
-	  	<img src="../img/1.jpg" alt="">
+	  	<img src="img/mesin/chasis.jpg" height="170px;">
 	  	<p style="overflow: scroll; height: 300px;">Urus is equipped with state-of-the-art of vehicle dynamics technology and features excellent adaptive technologies for every situation and road condition: 4-wheel drive system with active rear torque vectoring, 4-wheel steering, adaptive air suspension, electromechanical active roll stabilization system with continuous and immediate response and CCB (Carbon Ceramic Brakes), offering the best braking performance in the SUV segment. This unique technical package is fully managed by the ANIMA Selector and gives Urus the outstanding driving dynamics and handling of a pure Lamborghini.</p>
 	  </div>
 	</div>
@@ -390,15 +393,6 @@
 			</iframe>
 		</div>
 	</div>
-
-		<br>
-
-<!-- 	<h2>Parallelogram CSS</h2>
-	<div class="trapezoid">
-		<img src="../img/duaa.png" alt="" width="200px" height="50px">
-	</div>
- -->
-	<img src="../kkk.png" alt="" height="500px">
 
 		<br>
 	
