--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       		<div class="carousel-item">
 		        <!-- <img src="img/tiggaa.png" class="d-block w-100" alt="..."> -->
 		        <video class="video-fluid" autoplay loop muted style="width: 100%;">
-			        <source src="Videos/Lamborghini_Home.mp4" type="video/mp4"/>
+			        <source src="Videos/Lamborghini Huracán EVO Every Day Amplified_2.mp4" type="video/mp4"/>
 			      </video>
 		        <div class="carousel-caption d-none d-md-block">
 		          <h5>Third slide label</h5>
@@ -178,14 +178,12 @@
 	</div>
 
 	<div style="background-color: brown" class="kuning">
-		<img src="img/kuning.png" width="100%" height="100%">
+		<img src="img/Home.png" width="100%" height="100%">
 	</div>
 
 	<!-- BAWAH NYA CARAUSEL -->
 	<div style="background-color: blue; width: 100%; height: 350px" >
-		asdasdas
-		asdsad
-		asdsad
+		<img src="img/home/3.png" alt="">
 	</div>
 	
 	<br>
@@ -201,12 +199,12 @@
 				<div class="row">
 					<div class="col-sm-12" style="height: 200px;">
 						<div class="row hovereffect">	
-					        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
-					        <div class="overlay">
-					           	<h2>Hover effect 3</h2>
-								<p>asdasd</p>
-					           	<a class="info" href="#">Read More</a>
-					        </div>
+			        <img class="img-responsive" src="img/foto/luxury-sports-car-1043632.jpg" width="100%">
+			        <div class="overlay">
+		           	<h2>HURACÁN EVO: EVERY CHAMPION HAS A STYLE</h2>
+								<p>Andrea Cassarà is an Italian fencer, an Olympic Gold Medalist in Athens 2004 and London 2012, as well as an 8-time World Champion. During the visit he paid to the Automobili Lamborghini headquarters, he was fascinated by the staggering technological level of the exhilarating Huracán EVO. </p>
+		           	<a class="info" href="#">Read More</a>
+			        </div>
 						</div>
 					</div>
 					<div class="col-sm-6" style="height: 200px;">
@@ -221,25 +219,25 @@
 					</div>
 					<div class="col-sm-6" style="height: 200px;">
 						<div class="row hovereffect">	
-					        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
-					        <div class="overlay">
-					           	<h2>Hover effect 3</h2>
-								<p>asdasd</p>
-					           	<a class="info" href="#">Read More</a>
-					        </div>
+			        <img class="img-responsive" src="img/foto/austin-distel-2vCqH34PqWs-unsplash.jpg" alt="">
+			        <div class="overlay">
+		           	<h2>LAMBORGHINI LAUNCHES THE FUTURE FAB AWARD</h2>
+								<p>As an international brand brought to life by a dedicated team of people.</p>
+		           	<a class="info" href="#">Read More</a>
+			        </div>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4 zoom" style="height: 400px;">
 				<div class="row hovereffect">	
-					        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
-					        <div class="overlay">
-					           	<h2>Hover effect 3</h2>
-								<p>asdasd</p>
-					           	<a class="info" href="#">Read More</a>
-					        </div>
-						</div>
+	        <img class="img-responsive" src="img/foto/austin-distel-2vCqH34PqWs-unsplash.jpg" height="100%">
+	        <div class="overlay">
+	          <h2>LAMBORGHINI LAUNCHES THE FUTURE FAB AWARD</h2>
+						<p>As an international brand brought to life by a dedicated team of people who put their hearts into creating iconic cars and writing a history of innovation and speed, Automobili Lamborghini has launched an awards program dedicated to young women who share Lamborghini’s philosophies and approach to ideas.</p>
+	          <a class="info" href="#">Read More</a>
+	        </div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -255,10 +253,10 @@
 		<div class="row">
 			<div  class="col-sm-8" style="height: 200px;">
 				<div class="row hovereffect">	
-			        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
+			        <img class="img-responsive" src="img/foto/lamborghini-huracan-3080405.jpg" width="100%">
 			        <div class="overlay">
 			           	<h2>Hover effect 3</h2>
-						<p>asdasd</p>
+									<p>asdasd</p>
 			           	<a class="info" href="#">Read More</a>
 			        </div>
 				</div>
@@ -279,10 +277,20 @@
 				<div class="row">
 					<div class="col-sm-12" style="height: 200px;">
 						<div class="row hovereffect">	
-					        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
+					        <img class="img-responsive" src="img/arun-kuchibhotla-523600-unsplash.jpg" width="100%">
 					        <div class="overlay">
-					           	<h2>Hover effect 3</h2>
-								<p>asdasd</p>
+					           	<h2>HURACÁN EVO: EVERY CHAMPION HAS A STYLE</h2>
+											<p>Andrea Cassarà is an Italian fencer, an Olympic Gold Medalist in Athens 2004 and London 2012, as well as an 8-time World Champion. During the visit he paid to the Automobili Lamborghini headquarters, he was fascinated by the staggering technological level of the exhilarating Huracán EVO. </p>
+					           	<a class="info" href="#">Read More</a>
+					        </div>
+						</div>
+					</div>
+					<div class="col-sm-6" style="height: 200px;">
+						<div class="row hovereffect">	
+					        <img class="img-responsive" src="img/james-perez-1370885-unsplash.jpg" width="100%">
+					        <div class="overlay">
+					           	<h2>SUPER TROFEO ASIA 2019</h2>
+											<p>asdasd</p>
 					           	<a class="info" href="#">Read More</a>
 					        </div>
 						</div>
@@ -291,17 +299,7 @@
 						<div class="row hovereffect">	
 					        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
 					        <div class="overlay">
-					           	<h2>Hover effect 3</h2>
-								<p>asdasd</p>
-					           	<a class="info" href="#">Read More</a>
-					        </div>
-						</div>
-					</div>
-					<div class="col-sm-6" style="height: 200px;">
-						<div class="row hovereffect">	
-					        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
-					        <div class="overlay">
-					           	<h2>Hover effect 3</h2>
+					           	<h2>2</h2>
 								<p>asdasd</p>
 					           	<a class="info" href="#">Read More</a>
 					        </div>
@@ -313,7 +311,7 @@
 				<div class="row hovereffect">	
 			        <img class="img-responsive" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20(131).jpg" alt="">
 			        <div class="overlay">
-			           	<h2>Hover effect 3</h2>
+			           	<h2>3</h2>
 						<p>asdasd</p>
 			           	<a class="info" href="#">Read More</a>
 			        </div>
@@ -368,7 +366,7 @@
 			<li><a href="#">Motorsport</a></li>
 			<li><a href="#">History</a></li>
 			</ul>
-			<p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+			<p class="text-center">Copyright @2017 | Designed With by <a href="Profil/Profil.html">Fajar Company</a></p>
 		</div>
 	</footer>
 
